// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Functional - FormGroup > renders the correct input of type number 1`] = `
<input
  class="border-gray-400 border"
  id="number_input"
  inputmode="numeric"
  name="Number Input"
  pattern="[0-9]*"
  required=""
  type="text"
/>
`;

exports[`Functional - FormGroup > renders the correct input of type text 1`] = `
<input
  class="border-gray-400 border"
  id="text_input"
  name="Text Input"
  required=""
  type="text"
/>
`;
